--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-fonts": "^1.1.1",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
